	  enabling interrupts restores the proper state.
	* graphics/nxglib/lcd/nxglib_filltrapezoid.c and fb/nxglib_filltrapezoid.c:
	  Fix an error when the trapezoid is only 1 line high.  In this case, a
	  divide by zero error would occur.  The fix is to draw the 1 line high
	  trapezoid as a run.
	* drivers/usbdev/pl2303.c:  Fixe a cut'n'paste error that snuck into
	  the PL2303 emulation driver several months back.

6.20 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/stm3210e-eval/src and arch/arm/src/stm32/: Add beginnings of
	  power management support for the STM32 and the STM3210E-EVAL board, in
	  particular.
	* Documentation/NfsHowTo.html:  Add a How-To document for the new NFS
	  client feature.
	* arch/mips/include/pic32mx and arch/mips/src/pic32mx:  Add support for the
	  PIC32MX1 and PIC32MX2 families.
	* configs/mirtoo:  Add a board configuration to support the DTX1-4000L
	  "Mirtoo" module from http://www.dimitech.com/
	* tools/pic32mx:  All of the duplicate directories containing the same
	  same PIC32 tools were move to this single location.
	* configs/mirtoo:  The basic Mirtoo port is now functional.
	* configs/mirtoo/ostest:  Added support for the microchipOpen toolchain
	  (see http://sourceforge.net/projects/microchipopen/).
	* configs/mirtoo/nsh:  Added a NuttShell (NSH) configuration for
	  the Mirtoo module.
	* configs/mirtoo/scripts:  Move all Mirtoo linker scripts to a common
	  directory.
	* arch/mips/src/pic32mx/pic32mx-gpio.c:  All digital inputs were being
	  configured as outputs.  This is a *critical* bug fix and needs to be
	  incorporated by any PIC32 users.
	* drivers/mtd/sst25.c:  Added a driver for the SST 25 SPI-based FLASH
	  parts.
	* configs/mirtoo/src/up_nsh.c:  The Mirtoo NSH configuration can now
	  mount the SST 25 devices so that it can be used for a FAT file system.
	  There are are, however, some NSH memory usage issues if this configuration
	  enabled now.  Some tuning is still needed.
