@@ -1,5 +1,5 @@
 ############################################################################
-# configs/mirtoo/nsh/defconfig
+# configs/mirtoo/nxffs/defconfig
 #
 #   Copyright (C) 2012 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -143,7 +143,7 @@ CONFIG_PIC32MX_OC5=n
 CONFIG_PIC32MX_I2C1=n
 CONFIG_PIC32MX_I2C2=n
 CONFIG_PIC32MX_SPI1=n
-CONFIG_PIC32MX_SPI2=n
+CONFIG_PIC32MX_SPI2=y
 CONFIG_PIC32MX_UART1=y
 CONFIG_PIC32MX_UART2=n
 CONFIG_PIC32MX_ADC=n
@@ -168,10 +168,10 @@ CONFIG_PIC32MX_IOPORTC=y
 #
 # Mirtoo Board Settings
 #
-CONFIG_MTD_SST25=n
+CONFIG_MTD_SST25=y
 #CONFIG_SST25_SPIMODE
 #CONFIG_SST25_SPIFREQUENCY
-CONFIG_SST25_SECTOR512=n
+CONFIG_SST25_SECTOR512=y
 
 #
 # PIC32MX Configuration Settings
@@ -385,7 +385,7 @@ CONFIG_SCHED_WORKPRIORITY=192
 CONFIG_SCHED_WORKPERIOD=(50*1000)
 CONFIG_SCHED_WORKSTACKSIZE=1024
 CONFIG_SIG_SIGWORK=4
-CONFIG_SCHED_WAITPID=y
+CONFIG_SCHED_WAITPID=n
 CONFIG_SCHED_ATEXIT=n
 
 #
@@ -420,12 +420,12 @@ CONFIG_SYMTAB_ORDEREDBYNAME=y
 #   up waiting tasks.
 #
 CONFIG_DISABLE_CLOCK=n
-CONFIG_DISABLE_POSIX_TIMERS=n
-CONFIG_DISABLE_PTHREAD=n
+CONFIG_DISABLE_POSIX_TIMERS=y
+CONFIG_DISABLE_PTHREAD=y
 CONFIG_DISABLE_SIGNALS=n
-CONFIG_DISABLE_MQUEUE=n
-CONFIG_DISABLE_MOUNTPOINT=y
-CONFIG_DISABLE_ENVIRON=y
+CONFIG_DISABLE_MQUEUE=y
+CONFIG_DISABLE_MOUNTPOINT=n
+CONFIG_DISABLE_ENVIRON=n
 CONFIG_DISABLE_POLL=y
 
 #
@@ -545,10 +545,10 @@ CONFIG_PREALLOC_TIMERS=4
 #   implemented by copying whole files into memory.
 #
 CONFIG_FS_FAT=n
-CONFIG_FAT_LCNAMES=y
-CONFIG_FAT_LFN=y
+CONFIG_FAT_LCNAMES=n
+CONFIG_FAT_LFN=n
 CONFIG_FAT_MAXFNAME=32
-CONFIG_FS_NXFFS=n
+CONFIG_FS_NXFFS=y
 CONFIG_FS_ROMFS=n
 
 #
@@ -826,12 +826,12 @@ CONFIG_NSH_FILEIOSIZE=512
 CONFIG_NSH_STRERROR=n
 CONFIG_NSH_LINELEN=64
 CONFIG_NSH_NESTDEPTH=3
-CONFIG_NSH_DISABLESCRIPT=n
-CONFIG_NSH_DISABLEBG=n
+CONFIG_NSH_DISABLESCRIPT=y
+CONFIG_NSH_DISABLEBG=y
 CONFIG_NSH_ROMFSETC=n
 CONFIG_NSH_CONSOLE=y
 CONFIG_NSH_TELNET=n
-CONFIG_NSH_ARCHINIT=n
+CONFIG_NSH_ARCHINIT=y
 CONFIG_NSH_IOBUFFER_SIZE=512
 CONFIG_NSH_DHCPC=n
 CONFIG_NSH_NOMAC=n
@@ -846,6 +846,50 @@ CONFIG_NSH_FATDEVNO=1
 CONFIG_NSH_FATSECTSIZE=512
 CONFIG_NSH_FATNSECTORS=1024
 CONFIG_NSH_FATMOUNTPT=/tmp
+
+#
+# Each NSH command can be individually disabled via one of the following
+# settings.
+#
+CONFIG_NSH_DISABLE_CAT=n
+CONFIG_NSH_DISABLE_CD=n
+CONFIG_NSH_DISABLE_CP=n
+CONFIG_NSH_DISABLE_DD=y
+CONFIG_NSH_DISABLE_ECHO=n
+CONFIG_NSH_DISABLE_EXEC=y
+CONFIG_NSH_DISABLE_EXIT=y
+CONFIG_NSH_DISABLE_FREE=n
+CONFIG_NSH_DISABLE_GET=y
+CONFIG_NSH_DISABLE_HELP=n
+CONFIG_NSH_DISABLE_IFCONFIG=y
+CONFIG_NSH_DISABLE_KILL=y
+CONFIG_NSH_DISABLE_LOSETUP=n
+CONFIG_NSH_DISABLE_LS=n
+CONFIG_NSH_DISABLE_MB=n
+CONFIG_NSH_DISABLE_MKDIR=n
+CONFIG_NSH_DISABLE_MKFATFS=y
+CONFIG_NSH_DISABLE_MKFIFO=y
+CONFIG_NSH_DISABLE_MKRD=y
+CONFIG_NSH_DISABLE_MH=n
+CONFIG_NSH_DISABLE_MOUNT=n
+CONFIG_NSH_DISABLE_MW=n
+CONFIG_NSH_DISABLE_MV=n
+CONFIG_NSH_DISABLE_NFSMOUNT=y
+CONFIG_NSH_DISABLE_PS=n
+CONFIG_NSH_DISABLE_PING=y
+CONFIG_NSH_DISABLE_PUT=y
+CONFIG_NSH_DISABLE_PWD=n
+CONFIG_NSH_DISABLE_RM=n
+CONFIG_NSH_DISABLE_RMDIR=n
+CONFIG_NSH_DISABLE_SET=n
+CONFIG_NSH_DISABLE_SH=y
+CONFIG_NSH_DISABLE_SLEEP=n
+CONFIG_NSH_DISABLE_TEST=y
+CONFIG_NSH_DISABLE_UMOUNT=n
+CONFIG_NSH_DISABLE_UNSET=n
+CONFIG_NSH_DISABLE_USLEEP=n
+CONFIG_NSH_DISABLE_WGET=y
+CONFIG_NSH_DISABLE_XD=n
 
 #
 # Architecture-specific NSH options
